# signalspec

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
cli/: Cargo.toml  console.rs  diagnostic.rs  main.rs
doc/: language.text
docs/: data.md  expressions.md  flow.md  practical.md
lib/: core.signalspec  mma84.signalspec  spi.signalspec
lib/digital/: i2c.signalspec  serial.signalspec
lib/platform/: file.signalspec  seq.signalspec  serial.signalspec
lsp/: Cargo.toml  dispatch.rs  main.rs
plugins/starfish/: Cargo.toml  proto.rs  starfish.rs  starfish_usb.rs
plugins/vcd/: Cargo.toml  vcd.rs
src/: ast.rs  binfile.rs  connection.rs  connection_io.rs  context.rs  data.rs  data_usage.rs  dfa.rs  diagnostic.rs  dumpfile.rs  entitymap.rs  eval.rs  exec.rs  expr.rs  file_io.rs  interner.rs  lib.rs  main.rs  nfa.rs  process.rs  protocol.rs  resolve.rs  scope.rs  session.rs  signal.rs  signalspec.rustpeg  test.rs  test_runner.rs  tree.rs  util.rs  vcd.rs
src/core/: data.rs  derivs.rs  direction_infer.rs  expr.rs  expr_dn.rs  expr_resolve.rs  file.rs  function.rs  index.rs  item.rs  matchset.rs  mod.rs  module_loader.rs  op.rs  predicate.rs  primitive.rs  primitive_fn.rs  process.rs  protocol.rs  resolve.rs  scope.rs  shape.rs  step.rs  value.rs
src/language/: ast.rs  dfa.rs  direction_infer.rs  eval.rs  exec.rs  expr.rs  function.rs  matchset.rs  mod.rs  module_loader.rs  nfa.rs  primitive.rs  program.rs  protocol.rs  scope.rs  signalspec.rustpeg  step.rs
src/libsignalspec/: ast.rs  bitv.rs  clock_event.rs  context.rs  entity.rs  eval.rs  exec.rs  expr.rs  resolve.rs  session.rs  signal.rs  signalspec.rustpeg  test.rs  virtual_clock.rs
src/primitives/: binfile.rs  file_io.rs  mod.rs
src/resolve/: block.rs  context.rs  expr.rs  interface.rs  mod.rs  module_loader.rs  scope.rs  signal.rs  types.rs
src/runtime/: channel.rs  compile.rs  connection.rs  exec.rs  fsm_exec.rs  mod.rs  test_runner.rs
src/syntax/: ast.rs  ast_node.rs  binop.rs  grammar.rs  mod.rs  signalspec.rustpeg  span.rs  value.rs
src/util/: mod.rs
tests/: check-fail.rs  check.rs  min-prelude.signalspec
tests/check-fail/: alt.signalspec  for.signalspec  (+32 more)
(+48 files in other folders)
