[package]
name = "signalspec"
version = "0.1.0"
authors = [ "km@kevinmehall.net" ]
edition = "2021"

[workspace]
members = ["cli"]

[dependencies]
log = "0.4.14"
num-complex = "0.4"
byteorder = "1.0.0"
peg = "0.8"
vec_map = "0.8.0"
futures-lite = "1.12.0"
async-fs = "1.5.0"

[dev-dependencies]
env_logger = "0.8.3"

[[test]]
name = "check"
harness = false
