[package]
name = "signalspec"
version = "0.1.0"
authors = [ "km@kevinmehall.net" ]
edition = "2021"

[workspace]
members = ["cli", "lsp"]

[dependencies]
log = "0.4.14"
num-complex = "0.4"
peg = "0.8"
futures-lite = "1.12.0"
async-fs = "1.5.0"
num-rational = { version = "0.4.1", default_features = false }
num-traits = "0.2.15"
indexmap = "2.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
spidev = "0.6.0"
i2cdev = "0.6.0"

[dev-dependencies]
env_logger = "0.10.0"

[[test]]
name = "check"
harness = false

[[test]]
name = "check-fail"
harness = false

